test/orig/01-syntax/inv_properties/inv_properties.expected
File "inv_properties.ml", line 1, characters 43-44:
1 | let () = [%LOG [%DEBUG] "msg" [%PROPERTIES 0]]
                                               ^
Error: This expression has type int but an expression was expected of type
         (string * string) list
