test/orig/01-syntax/inv_properties/inv_properties.ml
let () = [%LOG [%DEBUG] "msg" [%PROPERTIES 0]]
